Add my endpoint for getting transaction by user